--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <a href=""><img src="./waterimg/banner.png" alt=""></a>
 </div>
 <ul class="catagory">
-    <li><a href=""><img src="./waterimg/l1.png" alt=""><p>水路综合</p></a></li>
+    <li><a href="list.html"><img src="./waterimg/l1.png" alt=""><p>水路综合</p></a></li>
     <li><a href=""><img src="./waterimg/l2.png" alt=""><p>水管维修</p></a></li>
     <li><a href=""><img src="./waterimg/l3.png" alt=""><p>管道维修</p></a></li>
     <li><a href=""><img src="./waterimg/l4.png" alt=""><p>龙头维修</p></a></li>
     <li><a href=""><img src="./waterimg/l5.png" alt=""><p>地漏疏通</p></a></li>
     <li><a href=""><img src="./waterimg/l6.png" alt=""><p>阀门维修</p></a></li>
     <li><a href=""><img src="./waterimg/l7.png" alt=""><p>下水道疏通</p></a></li>
-    <li><a href=""><img src="./waterimg/l8.png" alt=""><p>其它</p></a></li>
+    <li><a href="service.html"><img src="./waterimg/l8.png" alt=""><p>其它</p></a></li>
     <li></li>
 </ul>
 <footer>
