--- a/shop.html
+++ b/shop.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="header">
-    <a href="" class="iconfont icon-xiangzuo"></a>
+    <a href="index.html" class="iconfont icon-xiangzuo"></a>
     <span>商品详情</span>
     <a href=""></a>
 </div>
@@ -158,9 +158,11 @@
         <img src="./waterimg/tel.png" alt="">
         <p>联系商家</p>
     </div>
+    <a href="shopping.html">
     <div class="join">
         <span>加入购物车</span>
     </div>
+    </a>
     <div class="consume">
         <a href="shopping.html"><span>立即下单</span></a>
     </div>
