--- a/list.html
+++ b/list.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-    <a href="" class="iconfont icon-xiangzuo"></a>
+    <a href="index.html" class="iconfont icon-xiangzuo"></a>
     <span>水路综合</span>
     <a href=""></a>
 </header>
