--- a/shopping.html
+++ b/shopping.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="header">
-    <a href="" class="iconfont icon-xiangzuo"></a>
+    <a href="shop.html" class="iconfont icon-xiangzuo"></a>
     <span>购物车</span>
     <a href=""></a>
 </div>
