--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img src="./waterimg/sy.png" alt="">
         首页
     </a>
-    <a href="shop.html">
+    <a href="service.html">
         <img src="./waterimg/store.png" alt="">
         商城
     </a>
