--- a/shop.html
+++ b/shop.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="header">
-    <a href="index.html" class="iconfont icon-xiangzuo"></a>
+    <a href="service.html" class="iconfont icon-xiangzuo"></a>
     <span>商品详情</span>
     <a href=""></a>
 </div>
@@ -98,6 +98,7 @@
         <span class="type1">商品</span>
         <span class="type2">详情</span>
     </div>
+
     <div class="recommend">
         <div class="titlt">
             <span class="type1">相似</span>
@@ -106,45 +107,33 @@
         <ul>
             <li>
                 <img src="./waterimg/20.png" alt="">
-                <div class="direction">
                 <p>潜水艇高端龙头</p>
                 <span>60元</span>
-                </div>
             </li>
             <li>
                 <img src="./waterimg/20.png" alt="">
-                <div class="direction">
-                    <p>潜水艇高端龙头</p>
-                    <span>60元</span>
-                </div>
+                <p>潜水艇高端龙头</p>
+                <span>60元</span>
             </li>
             <li>
                 <img src="./waterimg/20.png" alt="">
-                <div class="direction">
-                    <p>潜水艇高端龙头</p>
-                    <span>60元</span>
-                </div>
+                <p>潜水艇高端龙头</p>
+                <span>60元</span>
             </li>
             <li>
                 <img src="./waterimg/20.png" alt="">
-                <div class="direction">
-                    <p>潜水艇高端龙头</p>
-                    <span>60元</span>
-                </div>
+                <p>潜水艇高端龙头</p>
+                <span>60元</span>
             </li>
             <li>
                 <img src="./waterimg/20.png" alt="">
-                <div class="direction">
-                    <p>潜水艇高端龙头</p>
-                    <span>60元</span>
-                </div>
+                <p>潜水艇高端龙头</p>
+                <span>60元</span>
             </li>
             <li>
                 <img src="./waterimg/20.png" alt="">
-                <div class="direction">
-                    <p>潜水艇高端龙头</p>
-                    <span>60元</span>
-                </div>
+                <p>潜水艇高端龙头</p>
+                <span>60元</span>
             </li>
         </ul>
     </div>
@@ -159,9 +148,9 @@
         <p>联系商家</p>
     </div>
     <a href="shopping.html">
-    <div class="join">
-        <span>加入购物车</span>
-    </div>
+        <div class="join">
+            <span>加入购物车</span>
+        </div>
     </a>
     <div class="consume">
         <a href="shopping.html"><span>立即下单</span></a>
