--- a/service.html
+++ b/service.html
@@ -11,75 +11,138 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1194306_83dzfjwtfwk.css">
 </head>
 <body>
-    <div class="header">
-        <a href="index.html" class="iconfont icon-xiangzuo"></a>
-        <span>中北</span>
-        <a href=""></a>
-    </div>
-    <div class="select">
-        <ul class="type">
-            <li>洗护</li>
-            <li>售水</li>
-            <li>卫浴</li>
-        </ul>
-    </div>
-    <div class="main">
-        <ul>
-            <li>
-                <a href="">
-                    <img src="./waterimg/xiyi.png" alt="">
-                    <p>洗衣</p>
+<div class="shadow">
+<div class="header">
+    <a href="index.html" class="iconfont icon-xiangzuo"></a>
+    <span>中北</span>
+    <a href=""></a>
+</div>
+<div class="select">
+    <ul class="type">
+        <li>洗护</li>
+        <li>售水</li>
+        <li>卫浴</li>
+    </ul>
+</div>
+</div>
+<div class="main">
+    <ul>
+        <li>
+            <a href="">
+                <img src="./waterimg/xiyi.png" alt="">
+                <p>洗衣</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <img src="./waterimg/xixie.png" alt="">
+                <p>洗鞋</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <img src="./waterimg/xijiafang.png" alt="">
+                <p>洗家纺</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <img src="./waterimg/xichuanglian.png" alt="">
+                <p>洗窗帘</p>
+            </a>
+        </li>
+    </ul>
+</div>
+<div class="all">
+    <span class="type1">&nbsp;&nbsp;全部</span>
+    <span class="type2">服务</span>
+</div>
+<div class="shop">
+    <ul>
+        <li class="listItem">
+            <div class="thumb">
+                <a href="shop.html">
+                    <img src="./waterimg/bao.png" alt="">
                 </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./waterimg/xixie.png" alt="">
-                    <p>洗鞋</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./waterimg/xijiafang.png" alt="">
-                    <p>洗家纺</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./waterimg/xichuanglian.png" alt="">
-                    <p>洗窗帘</p>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <div class="all">
-        <span class="type1">&nbsp;&nbsp;全部</span>
-        <span class="type2">服务</span>
-    </div>
-    <div class="shop">
-        <ul>
-            <li class="listItem">
-                <a href="">
-                    <div class="thumb">
-                        <img src="./waterimg/bao.png" alt="">
+            </div>
+            <div class="info">
+                <a href="shop.html">
+                    <h3>皮毛服饰清洗保养</h3>
+                    <p>服饰内外污渍清洗，去霉杀菌，不包含补色补伤</p>
+                    <span>好评&nbsp;<b>90%</b></span>
+                    <span>月售&nbsp;<b>278</b></span>
+                    <div class="price">60元/件</div>
+                    <div class="shop">
+                        <img src="./waterimg/baodashi.png" alt="">
+                        <span>包大师</span>
                     </div>
-                    <div class="info">
-                        <p>皮毛服饰清洗保养</p>
-                        <div class="score">
-                            <span>评分 <b>5.0</b></span>
-                            <span>接单率 <b>100%</b></span>
-                        </div>
-                        <div class="tag">
-                            <span>非常专业</span>
-                            <span>价格合理</span>
-                        </div>
-                        <div class="total">
-                            <span>已售：68</span>
-                        </div>
-                        <div class="price">60元 定金</div>
+                </a>
+            </div>
+        </li>
+        <li class="listItem">
+            <div class="thumb">
+                <a href="">
+                    <img src="./waterimg/bao.png" alt="">
+                </a>
+            </div>
+            <div class="info">
+                <a href="">
+                    <h3>皮毛服饰清洗保养</h3>
+                    <p>服饰内外污渍清洗，去霉杀菌，不包含补色补伤</p>
+                    <span>好评&nbsp;<b>90%</b></span>
+                    <span>月售&nbsp;<b>278</b></span>
+                    <div class="price">60元/件</div>
+                    <div class="shop">
+                        <img src="./waterimg/baodashi.png" alt="">
+                        <span>包大师</span>
                     </div>
                 </a>
-            </li>
-        </ul>
-    </div>
+            </div>
+        </li>
+        <li class="listItem">
+            <div class="thumb">
+                <a href="">
+                    <img src="./waterimg/bao.png" alt="">
+                </a>
+            </div>
+            <div class="info">
+                <a href="">
+                    <h3>皮毛服饰清洗保养</h3>
+                    <p>服饰内外污渍清洗，去霉杀菌，不包含补色补伤</p>
+                    <span>好评&nbsp;<b>90%</b></span>
+                    <span>月售&nbsp;<b>278</b></span>
+                    <div class="price">60元/件</div>
+                    <div class="shop">
+                        <img src="./waterimg/baodashi.png" alt="">
+                        <span>包大师</span>
+                    </div>
+                </a>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<footer>
+    <a href="index.html" class="hot">
+        <img src="./waterimg/sy.png" alt="">
+        首页
+    </a>
+    <a href="service.html">
+        <img src="./waterimg/store.png" alt="">
+        商城
+    </a>
+    <a href="">
+        <img src="./waterimg/rz.png" alt="">
+        入驻
+    </a>
+    <a href="">
+        <img src="./waterimg/order.png" alt="">
+        订单
+    </a>
+    <a href="">
+        <img src="./waterimg/personal.png" alt="">
+        我的
+    </a>
+</footer>
 </body>
 </html>
