--- a/shopping.html
+++ b/shopping.html
@@ -71,7 +71,7 @@
  </div>
 <div class="bottom">
     <div class="money">
-        <span class="he">合计： <b>￥162</b></span>
+        <span class="he">合计： <b>￥162</b></span><br>
         <span>运费￥20&nbsp;&nbsp;已优惠￥20</span>
     </div>
     <div class="button">
